kubernetes/dozzle/resources/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dozzle
  labels:
    app.kubernetes.io/name: dozzle
    app.kubernetes.io/part-of: dozzle
